// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-router-breadcrumbs-hoc Custom match options Should allow \`strict\` rule 1`] = `
<div
  className="breadcrumbs-container"
/>
`;

exports[`react-router-breadcrumbs-hoc Defaults No breadcrumb Should be possible to NOT render a breadcrumb 1`] = `
<div
  className="breadcrumbs-container"
>
  <span
    key="/one/two"
  >
    Two
  </span>
</div>
`;

exports[`react-router-breadcrumbs-hoc Defaults No routes array Should automatically render breadcrumbs with default strings 1`] = `
<div
  className="breadcrumbs-container"
>
  <span
    key="/one"
  >
    One
  </span>
  <span
    key="/one/two"
  >
    Two
  </span>
</div>
`;

exports[`react-router-breadcrumbs-hoc Defaults Override defaults Should render user-provided breadcrumbs where possible and use defaults otherwise 1`] = `
<div
  className="breadcrumbs-container"
>
  <span
    key="/one"
  >
    Override
  </span>
  <span
    key="/one/two"
  >
    Two
  </span>
</div>
`;

exports[`react-router-breadcrumbs-hoc Valid routes Should render breadcrumb components as expected 1`] = `
<div
  className="breadcrumbs-container"
>
  <span
    key="/1"
  >
    1
  </span>
  <span
    key="/1/2"
  >
    <breadcrumb
      location={
        Object {
          "hash": "",
          "pathname": "/1/2/3/4",
          "search": "",
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/1/2",
          "url": "/1/2",
        }
      }
    >
      <span>
        TWO
      </span>
    </breadcrumb>
  </span>
  <span
    key="/1/2/:number"
  >
    <BreadcrumbMatchTest
      location={
        Object {
          "hash": "",
          "pathname": "/1/2/3/4",
          "search": "",
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {
            "number": "3",
          },
          "path": "/1/2/:number",
          "url": "/1/2/3",
        }
      }
    >
      <span>
        3
      </span>
    </BreadcrumbMatchTest>
  </span>
  <span
    key="/1/2/:number/4"
  >
    <BreadcrumbNavLinkTest
      location={
        Object {
          "hash": "",
          "pathname": "/1/2/3/4",
          "search": "",
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {
            "number": "3",
          },
          "path": "/1/2/:number/4",
          "url": "/1/2/3/4",
        }
      }
    >
      <NavLink
        activeClassName="active"
        ariaCurrent="true"
        to="/1/2/3/4"
      >
        <Route
          path="/1/2/3/4"
        >
          <Link
            aria-current="true"
            className="active"
            replace={false}
            style={Object {}}
            to="/1/2/3/4"
          >
            <a
              aria-current="true"
              className="active"
              href="/1/2/3/4"
              onClick={[Function]}
              style={Object {}}
            >
              Link
            </a>
          </Link>
        </Route>
      </NavLink>
    </BreadcrumbNavLinkTest>
  </span>
</div>
`;

exports[`react-router-breadcrumbs-hoc When extending react-router config Should render expected breadcrumbs with sensible defaults 1`] = `
<div
  className="breadcrumbs-container"
>
  <span
    key="/one"
  >
    one-breadcrumb
  </span>
  <span
    key="/one/two"
  >
    Two
  </span>
</div>
`;
